[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lunarlinkbench"
version = "0.1.0"
description = "Science-data latency characterization for a lunar south-pole / PSR mission under direct-to-Earth and relay-assisted contact windows."
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
lunarlinkbench = "lunarlinkbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
